overlays/uksouth-staging/txm/harmonia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: api.${cluster_name}.${cluster_location}.bink.sh-harmonia
  namespace: default
spec:
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - backend:
              service:
                name: harmonia-api
                port:
                  number: 80
            path: /txm/config/keys
            pathType: Prefix
          - path: /txm/import/bink-loyalty/
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
          - path: /txm/import/bink-payment/
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
          - path: /txm/matching/force_match
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
          - path: /txm/mids/
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
          - path: /txm/status/
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
